add feature order with midtrans,  notification, and fix some minor bug