@@ -3,34 +3,35 @@ package com.binar.byteacademy.common.util;
 import com.binar.byteacademy.exception.ServiceBusinessException;
 import com.cloudinary.Cloudinary;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Component;
 
 import java.util.Base64;
+import java.util.Collections;
 import java.util.Map;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
 
-@Slf4j
 @Component
 @RequiredArgsConstructor
 public class ImageUtil {
     private final Cloudinary cloudinary;
 
+    @Async
     public CompletableFuture<String> base64UploadImage(String base64Image) {
         return CompletableFuture.supplyAsync(() -> {
             try {
                 byte[] decodedBytes = Base64.getMimeDecoder().decode(base64Image.split(",")[1]);
                 return cloudinary.uploader().upload(
                         decodedBytes,
-                        Map.of("public_id", UUID.randomUUID().toString())
+                        Collections.singletonMap("public_id", UUID.randomUUID().toString())
                 ).get("url").toString();
             } catch (Exception e) {
                 throw new ServiceBusinessException("Failed to upload image");
             }
         });
     }
+
 
     @Async
     public void deleteImage(String imageUrl) {
